# gifcities

./: .gitignore  Makefile  README.md  dev.requirements.txt  pyproject.toml  requirements.txt  settings.toml
src/gifcities/: config.py  web.py
src/gifcities/static/: stylesheet.css
src/gifcities/templates/: about.html  base.html  details.html  index.html  pagination.html  results.html  search_form.html
transform/: go.mod  ingest.sh  main.go  main_test.go  slowfetch.sh
transform/data/: README.md
