[build-system]
requires = ["setuptools==72.1.0"]
build-backend = "setuptools.build_meta"

[project]
name = "gifcities"
description = "Search interface for GeoCities gif files"
dependencies = [ 
  "dynaconf == 3.2.5",
  "setuptools==72.1.0",
  "elasticsearch==8.15.0",
  "pydantic==2.8.2",
  "starlette==0.38.2",
  "httpx==0.27.0",
  "uvicorn==0.30.5",
  "uvloop==0.19.0",   # optional dep for uvicorn
  "httptools==0.6.1", # optional dep for uvicorn
  "Jinja2==3.1.4",
  #"sentry-sdk==1.17.0",
  #"starlette-prometheus==0.9.0",
]
version = "0.0.1"
authors = [
    {name = "Nate Smith", email = "nsmith@archive.org"},
]
readme = "README.md"
license = {text = "AGPL3"}

[project.optional-dependencies]
dev = [
  "mypy==1.11.1",
  "pytest==8.3.2",
  "pytest-cov==5.0.0",
  "uv==0.2.34",
  "ruff==0.2.1",
  "pip-audit==2.7.0",
]
#ci = [ ]

[tool.ruff]
target-version="py312"
# I set line-length but it's not being enforced because I became infuriated at
# the inability to disable for commented lines and string literals. I refuse to
# painstakingly noqa all of those.
line-length=99
exclude = [
  ".git",
  "__pycache__",
  ".venv",
  ".pytest_cache",
  ".mypy_cache",
  ".ruff_cache",
]

[tool.ruff.lint]
select = ["C","E","F","W","ANN"]
# ANN003 is annotation on, eg, **kwargs
# ANN101 is annotation on 'self'
# ANN204 is annotation on '__init__()'
# ANN401 is 'Any' in type annotations
# E265,E266 are restrictions on comments ('#')
ignore = ["C901", "ANN003", "ANN101", "ANN204", "ANN401", "E265", "E266", "E501"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["E402", "F401"]
"**/{tests,docs,tools}/*" = ["E402", "ANN201", "ANN001"]
